[gd_scene load_steps=7 format=3 uid="uid://casagc83e6svl"]

[ext_resource type="Script" path="res://levels/common/hud/hud.gd" id="1_ccfeb"]
[ext_resource type="Theme" uid="uid://c1i0aferjhvnu" path="res://levels/common/hud/themes/button_theme.tres" id="2_r4847"]

[sub_resource type="LabelSettings" id="LabelSettings_ux1y0"]
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_alwey"]
line_spacing = 66.0
font_size = 300

[sub_resource type="LabelSettings" id="LabelSettings_u5x2j"]
font_size = 225

[sub_resource type="LabelSettings" id="LabelSettings_wyv31"]
font_size = 240

[node name="Hud" type="Control" groups=["HUD"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ccfeb")

[node name="UnbeatableLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -28.0
offset_right = 4798.0
offset_bottom = 793.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
text = "Level impossible to beat now!
Fase imposs√≠vel de terminar agora!"
label_settings = SubResource("LabelSettings_ux1y0")
horizontal_alignment = 1

[node name="SpeedrunPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.0
offset_right = 48.0
offset_bottom = 14.0
grow_horizontal = 2

[node name="SpeedrunTimer" type="Label" parent="SpeedrunPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.5
offset_top = -4.0
offset_right = 1845.5
offset_bottom = 405.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
text = "00m00s00ms"
label_settings = SubResource("LabelSettings_alwey")
horizontal_alignment = 1

[node name="PlayerHealthBar" type="ProgressBar" parent="."]
modulate = Color(0.137255, 0, 1, 1)
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 64.0
offset_bottom = 16.0
show_percentage = false

[node name="Panel" type="Panel" parent="PlayerHealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -7.5
offset_right = 31.5
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PlayerHealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.5
offset_top = -8.5
offset_right = 661.5
offset_bottom = 298.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "Player"
label_settings = SubResource("LabelSettings_u5x2j")
horizontal_alignment = 1

[node name="PartnerHealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.545098, 0, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 17.0
grow_horizontal = 0
show_percentage = false

[node name="Panel" type="Panel" parent="PartnerHealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -8.0
offset_right = 31.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="PartnerHealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -8.5
offset_right = 803.0
offset_bottom = 298.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "Partner"
label_settings = SubResource("LabelSettings_u5x2j")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -5.0
offset_right = 128.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="PartnerConditionBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -13.0
offset_right = 128.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 6

[node name="LevelComplete" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="LevelComplete"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.85
anchor_top = -0.5
anchor_right = 1.95
anchor_bottom = 1.4
grow_horizontal = 2
grow_vertical = 2

[node name="LevelCompleteLabel" type="Label" parent="LevelComplete/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_top = 8.0
offset_right = 2169.0
offset_bottom = 417.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
text = "Level Complete!"
label_settings = SubResource("LabelSettings_wyv31")
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="LevelComplete/Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -10.0
offset_right = 1194.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme = ExtResource("2_r4847")
theme_override_font_sizes/font_size = 240
text = "Next Level"

[node name="RestartButton" type="Button" parent="LevelComplete/Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = 10.0
offset_right = 1194.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme = ExtResource("2_r4847")
theme_override_font_sizes/font_size = 240
text = "Restart"

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.4
anchor_top = -0.475
anchor_right = 1.475
anchor_bottom = 1.4
grow_horizontal = 2
grow_vertical = 2

[node name="PausedLabel" type="Label" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.5
offset_top = 7.0
offset_right = 2169.5
offset_bottom = 416.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
text = "Paused"
label_settings = SubResource("LabelSettings_wyv31")
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -10.5
offset_right = 1194.5
offset_bottom = 325.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme = ExtResource("2_r4847")
theme_override_font_sizes/font_size = 240
text = "Resume"

[node name="QuitButton" type="Button" parent="PauseMenu/Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = 9.5
offset_right = 1194.5
offset_bottom = 345.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme = ExtResource("2_r4847")
theme_override_font_sizes/font_size = 240
text = "Quit"

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameOver"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.4
anchor_top = -0.475
anchor_right = 1.475
anchor_bottom = 1.4
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOver/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.5
offset_top = 2.0
offset_right = 2168.5
offset_bottom = 411.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
text = "Game Over!"
label_settings = SubResource("LabelSettings_wyv31")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOver/Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -10.5
offset_right = 1194.5
offset_bottom = 325.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme = ExtResource("2_r4847")
theme_override_font_sizes/font_size = 240
text = "Restart"

[node name="QuitButton" type="Button" parent="GameOver/Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = 9.5
offset_right = 1194.5
offset_bottom = 345.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme = ExtResource("2_r4847")
theme_override_font_sizes/font_size = 240
text = "Quit"

[connection signal="visibility_changed" from="LevelComplete" to="." method="_on_level_complete_visibility_changed"]
[connection signal="pressed" from="LevelComplete/Panel/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="LevelComplete/Panel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="visibility_changed" from="PauseMenu" to="." method="_on_pause_menu_visibility_changed"]
[connection signal="pressed" from="PauseMenu/Panel/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="visibility_changed" from="GameOver" to="." method="_on_game_over_visibility_changed"]
[connection signal="pressed" from="GameOver/Panel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOver/Panel/QuitButton" to="." method="_on_quit_button_pressed"]
